SEB-1977 ensure quantity is not cut off when over 1000

--- a/src/UI/Buyer/src/app/components/products/product-details/product-details.component.scss
+++ b/src/UI/Buyer/src/app/components/products/product-details/product-details.component.scss
@@ -5,3 +5,7 @@
 .product-qty-input {
     max-width: 100px
 }
+
+.flex-shrink-0 {
+    flex-shrink: 0;
+}
